--- a/src/Pages/Gallery/Gallery.css
+++ b/src/Pages/Gallery/Gallery.css
@@ -41,7 +41,12 @@
 .gallery-item:hover {
   transform: translateY(-5px);
 }
-
+.gallery-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  display: block;
+}
 .image-placeholder {
   width: 100%;
   height: 250px;
